--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -111,80 +111,48 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="src\AST\Expr.cpp" />
-    <ClCompile Include="src\AST\Node.cpp" />
-    <ClCompile Include="src\IR\BasicBlock.cpp" />
-    <ClCompile Include="src\IR\Function.cpp" />
-    <ClCompile Include="src\IR\Instruction.cpp" />
-    <ClCompile Include="src\IR\IRPrinter.cpp" />
-    <ClCompile Include="src\IR\NameGenerator.cpp" />
-    <ClCompile Include="src\IR\Type.cpp" />
-    <ClCompile Include="src\IR\Unit.cpp" />
-    <ClCompile Include="src\Parsing\EnclosedExpr.cpp" />
-    <ClCompile Include="src\Parsing\ExprElem.cpp" />
-    <ClCompile Include="src\Parsing\NodePos.cpp" />
-    <ClCompile Include="src\AST\Stmt.cpp" />
-    <ClCompile Include="src\AST\TypeDesc.cpp" />
-    <ClCompile Include="src\Logging\Logger.cpp" />
-    <ClCompile Include="src\Logging\LogStream.cpp" />
-    <ClCompile Include="src\Parsing\ExprParser.cpp" />
-    <ClCompile Include="src\Parsing\Lexer.cpp" />
-    <ClCompile Include="src\Parsing\Operator.cpp" />
-    <ClCompile Include="src\Parsing\Parser.cpp" />
-    <ClCompile Include="src\Parsing\ParseState.cpp" />
-    <ClCompile Include="src\Parsing\Token.cpp" />
-    <ClCompile Include="src\Semantics\Builtin.cpp" />
-    <ClCompile Include="src\Semantics\ConstantEvaluator.cpp" />
-    <ClCompile Include="src\Semantics\ConstantSymbol.cpp" />
-    <ClCompile Include="src\Semantics\Scope.cpp" />
-    <ClCompile Include="src\Semantics\SemanticChecker.cpp" />
-    <ClCompile Include="src\Semantics\Symbol.cpp" />
-    <ClCompile Include="src\Semantics\SymbolTable.cpp" />
-    <ClCompile Include="src\Semantics\TypedSymbol.cpp" />
-    <ClCompile Include="src\Semantics\TypeSymbol.cpp" />
-    <ClCompile Include="src\Semantics\VarSymbol.cpp" />
-    <ClCompile Include="src\Utils\FileUtils.cpp" />
-    <ClCompile Include="src\Utils\StringUtils.cpp" />
-    <ClCompile Include="src\Utils\XMLNode.cpp" />
+    <ClCompile Include="src2\AST\Expr.cpp" />
+    <ClCompile Include="src2\AST\Node.cpp" />
+    <ClCompile Include="src2\AST\Stmt.cpp" />
+    <ClCompile Include="src2\Debug\Logger.cpp" />
+    <ClCompile Include="src2\Debug\ParserTest.cpp" />
+    <ClCompile Include="src2\Parsing\AtomicParselet.cpp" />
+    <ClCompile Include="src2\Parsing\InfixOperatorParselet.cpp" />
+    <ClCompile Include="src2\Parsing\InfixParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Lexer.cpp" />
+    <ClCompile Include="src2\Parsing\LexerState.cpp" />
+    <ClCompile Include="src2\Parsing\ExprParser.cpp" />
+    <ClCompile Include="src2\Parsing\Position.cpp" />
+    <ClCompile Include="src2\Parsing\PostfixOperatorParselet.cpp" />
+    <ClCompile Include="src2\Parsing\PrefixOperatorParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Token.cpp" />
+    <ClCompile Include="src2\Parsing\YExprParser.cpp" />
+    <ClCompile Include="src2\Utility\StringUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AST\Expr.h" />
-    <ClInclude Include="src\AST\Node.h" />
-    <ClInclude Include="src\IR\BasicBlock.h" />
-    <ClInclude Include="src\IR\Function.h" />
-    <ClInclude Include="src\IR\Instruction.h" />
-    <ClInclude Include="src\IR\IRPrinter.h" />
-    <ClInclude Include="src\IR\NameGenerator.h" />
-    <ClInclude Include="src\IR\Opcode.h" />
-    <ClInclude Include="src\IR\Type.h" />
-    <ClInclude Include="src\IR\Unit.h" />
-    <ClInclude Include="src\Parsing\EnclosedExpr.h" />
-    <ClInclude Include="src\Parsing\NodePos.h" />
-    <ClInclude Include="src\AST\Stmt.h" />
-    <ClInclude Include="src\AST\TypeDesc.h" />
-    <ClInclude Include="src\Logging\Logger.h" />
-    <ClInclude Include="src\Logging\LogStream.h" />
-    <ClInclude Include="src\Parsing\ExprElem.h" />
-    <ClInclude Include="src\Parsing\ExprParser.h" />
-    <ClInclude Include="src\Parsing\Lexer.h" />
-    <ClInclude Include="src\Parsing\Parser.h" />
-    <ClInclude Include="src\Parsing\ParseState.h" />
-    <ClInclude Include="src\Parsing\Token.h" />
-    <ClInclude Include="src\Parsing\Operator.h" />
-    <ClInclude Include="src\Semantics\Builtin.h" />
-    <ClInclude Include="src\Semantics\ConstantEvaluator.h" />
-    <ClInclude Include="src\Semantics\ConstantSymbol.h" />
-    <ClInclude Include="src\Semantics\Scope.h" />
-    <ClInclude Include="src\Semantics\SemanticChecker.h" />
-    <ClInclude Include="src\Semantics\SymbolTable.h" />
-    <ClInclude Include="src\Semantics\Symbol.h" />
-    <ClInclude Include="src\Semantics\TypedSymbol.h" />
-    <ClInclude Include="src\Semantics\TypeSymbol.h" />
-    <ClInclude Include="src\Semantics\VarSymbol.h" />
-    <ClInclude Include="src\Types.h" />
-    <ClInclude Include="src\Utils\FileUtils.h" />
-    <ClInclude Include="src\Utils\StringUtils.h" />
-    <ClInclude Include="src\Utils\XMLNode.h" />
+    <ClInclude Include="src2\AST\Expr.h" />
+    <ClInclude Include="src2\AST\Node.h" />
+    <ClInclude Include="src2\AST\Stmt.h" />
+    <ClInclude Include="src2\Common.h" />
+    <ClInclude Include="src2\Debug\LogLevel.h" />
+    <ClInclude Include="src2\Debug\ParserTest.h" />
+    <ClInclude Include="src2\Parsing\AtomicParselet.h" />
+    <ClInclude Include="src2\Parsing\InfixOperatorParselet.h" />
+    <ClInclude Include="src2\Parsing\InfixParselet.h" />
+    <ClInclude Include="src2\Parsing\Lexer.h" />
+    <ClInclude Include="src2\Parsing\LexerState.h" />
+    <ClInclude Include="src2\Parsing\ExprParser.h" />
+    <ClInclude Include="src2\Parsing\Parser.h" />
+    <ClInclude Include="src2\Parsing\Position.h" />
+    <ClInclude Include="src2\Parsing\PostfixOperatorParselet.h" />
+    <ClInclude Include="src2\Parsing\PrefixOperatorParselet.h" />
+    <ClInclude Include="src2\Parsing\PrefixParselet.h" />
+    <ClInclude Include="src2\Parsing\Token.h" />
+    <ClInclude Include="src2\Parsing\YExprParser.h" />
+    <ClInclude Include="src2\Utility\Iterator.h" />
+    <ClInclude Include="src2\Debug\Logger.h" />
+    <ClInclude Include="src2\Utility\MapExtension.h" />
+    <ClInclude Include="src2\Utility\StringUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
