--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -116,16 +116,16 @@
     <ClCompile Include="src2\AST\Stmt.cpp" />
     <ClCompile Include="src2\Debug\Logger.cpp" />
     <ClCompile Include="src2\Debug\ParserTest.cpp" />
-    <ClCompile Include="src2\Parsing\AtomicParselet.cpp" />
-    <ClCompile Include="src2\Parsing\InfixOperatorParselet.cpp" />
-    <ClCompile Include="src2\Parsing\InfixParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\AtomicParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\InfixOperatorParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\InfixParselet.cpp" />
     <ClCompile Include="src2\Parsing\Lexer.cpp" />
     <ClCompile Include="src2\Parsing\LexerState.cpp" />
     <ClCompile Include="src2\Parsing\ExprParser.cpp" />
     <ClCompile Include="src2\Parsing\Parser.cpp" />
     <ClCompile Include="src2\Parsing\Position.cpp" />
-    <ClCompile Include="src2\Parsing\PostfixOperatorParselet.cpp" />
-    <ClCompile Include="src2\Parsing\PrefixOperatorParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\PostfixOperatorParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\PrefixOperatorParselet.cpp" />
     <ClCompile Include="src2\Parsing\Token.cpp" />
     <ClCompile Include="src2\Parsing\YExprParser.cpp" />
     <ClCompile Include="src2\Utility\StringUtils.cpp" />
@@ -137,19 +137,21 @@
     <ClInclude Include="src2\Common.h" />
     <ClInclude Include="src2\Debug\LogLevel.h" />
     <ClInclude Include="src2\Debug\ParserTest.h" />
-    <ClInclude Include="src2\Parsing\AtomicParselet.h" />
-    <ClInclude Include="src2\Parsing\InfixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\InfixParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\AtomicParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\ExprParselets.h" />
+    <ClInclude Include="src2\Parsing\Parselets\InfixOperatorParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\InfixParselet.h" />
     <ClInclude Include="src2\Parsing\Lexer.h" />
     <ClInclude Include="src2\Parsing\LexerState.h" />
     <ClInclude Include="src2\Parsing\ExprParser.h" />
     <ClInclude Include="src2\Parsing\Parser.h" />
     <ClInclude Include="src2\Parsing\Position.h" />
-    <ClInclude Include="src2\Parsing\PostfixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\PrefixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\PrefixParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\PostfixOperatorParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\PrefixOperatorParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\PrefixParselet.h" />
     <ClInclude Include="src2\Parsing\Token.h" />
     <ClInclude Include="src2\Parsing\YExprParser.h" />
+    <ClInclude Include="src2\Parsing\YStmtParser.h" />
     <ClInclude Include="src2\Utility\Iterator.h" />
     <ClInclude Include="src2\Debug\Logger.h" />
     <ClInclude Include="src2\Utility\MapExtension.h" />
