More abstract parsing

--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -114,15 +114,17 @@
     <ClCompile Include="src2\AST\Expr.cpp" />
     <ClCompile Include="src2\AST\Node.cpp" />
     <ClCompile Include="src2\AST\Stmt.cpp" />
+    <ClCompile Include="src2\AST\TypeDesc.cpp" />
     <ClCompile Include="src2\Debug\Logger.cpp" />
     <ClCompile Include="src2\Debug\UnitTests\ParserUnitTest.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\AtomicParselet.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\EncloseParselet.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\FuncCallParselet.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\InfixOperatorParselet.cpp" />
-    <ClCompile Include="src2\Parsing\Parselets\InfixParselet.cpp" />
     <ClCompile Include="src2\Parsing\Lexer.cpp" />
     <ClCompile Include="src2\Parsing\LexerState.cpp" />
     <ClCompile Include="src2\Parsing\ExprParser.cpp" />
+    <ClCompile Include="src2\Parsing\Parselets\LetParselet.cpp" />
     <ClCompile Include="src2\Parsing\Parser.cpp" />
     <ClCompile Include="src2\Parsing\Position.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\PostfixOperatorParselet.cpp" />
@@ -136,23 +138,28 @@
     <ClInclude Include="src2\AST\Expr.h" />
     <ClInclude Include="src2\AST\Node.h" />
     <ClInclude Include="src2\AST\Stmt.h" />
+    <ClInclude Include="src2\AST\TypeDesc.h" />
     <ClInclude Include="src2\Common.h" />
     <ClInclude Include="src2\Debug\LogLevel.h" />
     <ClInclude Include="src2\Debug\UnitTest.h" />
     <ClInclude Include="src2\Debug\UnitTests\ParserUnitTest.h" />
     <ClInclude Include="src2\Parsing\Parselets\AtomicParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\EncloseParselet.h" />
     <ClInclude Include="src2\Parsing\Parselets\ExprParselets.h" />
     <ClInclude Include="src2\Parsing\Parselets\FuncCallParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\IInfixParselet.h" />
     <ClInclude Include="src2\Parsing\Parselets\InfixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\Parselets\InfixParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\InfixExprParselet.h" />
     <ClInclude Include="src2\Parsing\Lexer.h" />
     <ClInclude Include="src2\Parsing\LexerState.h" />
     <ClInclude Include="src2\Parsing\ExprParser.h" />
+    <ClInclude Include="src2\Parsing\Parselets\IPrefixParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\LetParselet.h" />
     <ClInclude Include="src2\Parsing\Parser.h" />
     <ClInclude Include="src2\Parsing\Position.h" />
     <ClInclude Include="src2\Parsing\Parselets\PostfixOperatorParselet.h" />
     <ClInclude Include="src2\Parsing\Parselets\PrefixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\Parselets\PrefixParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\PrefixExprParselet.h" />
     <ClInclude Include="src2\Parsing\Token.h" />
     <ClInclude Include="src2\Parsing\YExprParser.h" />
     <ClInclude Include="src2\Parsing\YStmtParser.h" />
