--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -117,7 +117,6 @@
     <ClCompile Include="src2\AST\TypeDesc.cpp" />
     <ClCompile Include="src2\Debug\Logger.cpp" />
     <ClCompile Include="src2\Debug\UnitTests\ParserUnitTest.cpp" />
-    <ClCompile Include="src2\Parsing\Parselets\AtomicParselet.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\EncloseParselet.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\FuncCallParselet.cpp" />
     <ClCompile Include="src2\Parsing\Parselets\InfixOperatorParselet.cpp" />
@@ -149,7 +148,7 @@
     <ClInclude Include="src2\Parsing\Parselets\FuncCallParselet.h" />
     <ClInclude Include="src2\Parsing\Parselets\IInfixParselet.h" />
     <ClInclude Include="src2\Parsing\Parselets\InfixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\Parselets\InfixExprParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\InfixParselet.h" />
     <ClInclude Include="src2\Parsing\Lexer.h" />
     <ClInclude Include="src2\Parsing\LexerState.h" />
     <ClInclude Include="src2\Parsing\ExprParser.h" />
@@ -159,7 +158,7 @@
     <ClInclude Include="src2\Parsing\Position.h" />
     <ClInclude Include="src2\Parsing\Parselets\PostfixOperatorParselet.h" />
     <ClInclude Include="src2\Parsing\Parselets\PrefixOperatorParselet.h" />
-    <ClInclude Include="src2\Parsing\Parselets\PrefixExprParselet.h" />
+    <ClInclude Include="src2\Parsing\Parselets\PrefixParselet.h" />
     <ClInclude Include="src2\Parsing\Token.h" />
     <ClInclude Include="src2\Parsing\YExprParser.h" />
     <ClInclude Include="src2\Parsing\YStmtParser.h" />
