--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="src\parse\lexer.h" />
     <ClInclude Include="src\parse\lex_rule.h" />
     <ClInclude Include="src\parse\token.h" />
+    <ClInclude Include="src\parse\ylexer.h" />
     <ClInclude Include="src\utility\iterator.h" />
     <ClInclude Include="src\utility\optional.h" />
     <ClInclude Include="src\utility\static_max.h" />
@@ -125,8 +126,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\parse\lexer.cpp" />
     <ClCompile Include="src\parse\lex_rule.cpp" />
     <ClCompile Include="src\parse\token.cpp" />
+    <ClCompile Include="src\parse\ylexer.cpp" />
     <ClCompile Include="src\utility\optional.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
