--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -116,6 +116,8 @@
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\parse\lexer.h" />
     <ClInclude Include="src\parse\lex_rule.h" />
+    <ClInclude Include="src\parse\parser.h" />
+    <ClInclude Include="src\parse\token_buffer.h" />
     <ClInclude Include="src\parse\token.h" />
     <ClInclude Include="src\parse\ylexer.h" />
     <ClInclude Include="src\utility\iterator.h" />
@@ -128,6 +130,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\parse\lexer.cpp" />
     <ClCompile Include="src\parse\lex_rule.cpp" />
+    <ClCompile Include="src\parse\parser.cpp" />
+    <ClCompile Include="src\parse\token_buffer.cpp" />
     <ClCompile Include="src\parse\token.cpp" />
     <ClCompile Include="src\parse\ylexer.cpp" />
     <ClCompile Include="src\utility\optional.cpp" />
